@@ -697,14 +697,21 @@ class BuilderTestCase(unittest.TestCase):
                                         single_source = 1, suffix='.out')
         env['CNT'] = [0]
         tgt = builder(env, target=outfiles[0], source=infiles[0])[0]
+        s = str(tgt)
+        assert s == test.workpath('0.out'), s
         tgt.prepare()
         tgt.build()
         assert env['CNT'][0] == 1, env['CNT'][0]
         tgt = builder(env, outfiles[1], infiles[1])[0]
+        s = str(tgt)
+        assert s == test.workpath('1.out'), s
         tgt.prepare()
         tgt.build()
         assert env['CNT'][0] == 2
         tgts = builder(env, None, infiles[2:4])
+        s = str(tgts)
+        expect = str([test.workpath('2.out'), test.workpath('3.out')])
+        assert s == expect, s
         for t in tgts: t.prepare()
         tgts[0].build()
         tgts[1].build()
